--- a/src/bedrock-agentcore-itsm/requirements.txt
+++ b/src/bedrock-agentcore-itsm/requirements.txt
@@ -5,6 +5,9 @@ botocore>=1.34.0
 # Strands framework for AWS-native agent development
 strands-agents>=1.0.0
 
+# AgentCore Runtime SDK
+bedrock-agentcore-runtime
+
 # HTTP client for API Gateway integration
 requests>=2.31.0
 urllib3>=2.0.0
@@ -13,4 +16,4 @@ urllib3>=2.0.0
 pydantic>=2.0.0
 
 # Logging and configuration
-python-dotenv>=1.0.0strands-agents>=1.0.0
+python-dotenv>=1.0.0
