--- a/src/bedrock-agentcore-itsm/requirements.txt
+++ b/src/bedrock-agentcore-itsm/requirements.txt
@@ -2,11 +2,11 @@
 boto3>=1.34.0
 botocore>=1.34.0
 
-# Strands framework for AWS-native agent development
-strands-agents>=1.0.0
-
 # AgentCore Runtime SDK
-bedrock-agentcore-runtime
+bedrock-agentcore>=0.1.0
+
+# ASGI server for running the app
+uvicorn>=0.27.0
 
 # HTTP client for API Gateway integration
 requests>=2.31.0
