--- a/src/bedrock-agentcore-itsm/requirements.txt
+++ b/src/bedrock-agentcore-itsm/requirements.txt
@@ -2,8 +2,11 @@
 boto3>=1.34.0
 botocore>=1.34.0
 
+# Strands framework for AWS-native agent development
+strands-agents
+
 # AgentCore Runtime SDK
-bedrock-agentcore>=0.1.0
+bedrock-agentcore
 
 # ASGI server for running the app
 uvicorn>=0.27.0
